@@ -1098,6 +1098,12 @@ private:
   void PQXX_PRIVATE unregister_transaction(transaction_base *) noexcept;
 
   friend struct internal::gate::connection_stream_from;
+  /// Read a line of COPY output.
+  /** If the output indicates that the COPY has ended, the buffer pointer
+   * will be null and the size will be zero.  Otherwise, the pointer will hold
+   * a buffer containing the line, and size will be its length not including
+   * the newline at the end.
+   */
   std::pair<std::unique_ptr<char, void (*)(void const *)>, std::size_t>
   read_copy_line();
 
