@@ -174,7 +174,7 @@ private:
     auto const line_size{std::size(line)};
 #endif
 
-    assert(offset < line_size);
+    assert(offset <= line_size);
 
     char const *lp{std::data(line)};
 
@@ -185,10 +185,10 @@ private:
 
     if ((lp[offset] == '\\') and (lp[offset + 1] == 'N'))
     {
-      // Null field.
-      assert(lp[offset + 2] == '\t');
-      // Consume the "\N" and the field separator.
+      // Null field.  Consume the "\N" and the field separator.
       offset += 3;
+      assert(offset <= (line_size + 1));
+      assert(lp[offset - 1] == '\t');
       // Return a null value.  There's nothing to write into m_row.
       return {offset, write, {}};
     }
@@ -267,7 +267,7 @@ private:
     using field_type = strip_t<TARGET>;
     using nullity = nullness<field_type>;
 
-    assert(offset < std::size(line));
+    assert(offset <= std::size(line));
 
     auto [new_offset, new_write, text]{read_field(line, offset, write)};
     offset = new_offset;
